2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin-api.xml: Move chapter tags from path.xml back here.
	Include logon-funcs.xml.
	* logon-funcs.xml: Moved from ../cygwin here and converted to XML.
	* path.xml: Drop chapter tags.  Create subsections.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Throughout use parenthesis instead of braces where
	appropriate.
	(DBXDIRS): Remove.
	(XSLTPROC): Define for symmetry.  Use throughout.
	(clean): Drop removing cygwin-api.xml and doctool.*.
	(cygwin-api.xml): Drop rule.
	(doctool): Drop rule.
	(Makefile.dep): Add dependency to cygwin-api.xml.
	* cygwin-api.in.xml: Rename to cygwin-api.xml.  Convert includes to
	XML XInclude style.
	* doctool.c: Remove.
	* doctool.txt: Remove.
	* faq-programming.xml: Drop reference to local utils.xml file.
	* path.xml: Moved from ../cygwin and converted to XML.
	* posix.xml: Ditto.
	* using.xml: Drop relative path from utils.xml include.
	* utils.xml: Moved from ../utils.

2014-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml: (ov-new1.7.33): Add new section.
	(ov-new1.7.32): Reflect intermediate 1.7.32 release.

2014-08-06  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-mapping): Drop plus-prepended builtin accounts as
	default setting.  Add short explanation in db_prefix: always mode.
	Fix a type.  Drop a paragraph with redundant information.

2014-08-03  Yaakov Selkowitz  <yselkowitz@cygwin.com>

	* faq-what.xml (faq.what.who): Remove mention of retired setup
	maintainers.  Add link to cygwin-pkg-maint.

2014-07-31  Yaakov Selkowitz  <yselkowitz@cygwin.com>

	* faq-what.xml (faq.what.who): CGF has retired.

2014-07-30  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Small improvments.

2014-07-30  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml: (ov-new1.7): Change section title.

2014-07-30  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml: (ov-new1.7.1): Add new section.  Move old 1.7